--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,10 @@ theme: jekyll-theme-midnight
 title: Tinkerer
 description: Adventures in code and experiments
 show_downloads: false
-
+gem: "jekyll_theme_midnight"
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: default
