--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ theme: jekyll-theme-midnight
 title: Tinkerer
 description: "Adventures in code"
 show_downloads: false
+repository: "GeeWee/geewee.github.io"
 gems:
   - "jekyll_theme_midnight"
 defaults:
