--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Tinkerer
 description: "Adventures in code"
 show_downloads: false
 repository: "GeeWee/geewee.github.io"
-gems:
+plugins:
   - "jekyll_theme_midnight"
 defaults:
   -
