added newsletter img

--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,11 @@ show_downloads: false
 repository: "GeeWee/geewee.github.io"
 plugins:
   - "jekyll_theme_midnight"
+  - "jekyll-remote-theme"
 defaults:
   -
     scope:
       path: ""
     values:
       layout: default
+remote_theme: benbalter/retlab
