first draft of publishing workflow. Pushing to test rss feed

--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,14 @@ theme: jekyll-theme-midnight
 title: Tinkerer
 description: "Adventures in code"
 show_downloads: false
+url: https://gustavwengel.dk
 repository: "GeeWee/geewee.github.io"
+author: Gustav Wengel
 defaults:
   -
     scope:
       path: ""
     values:
       layout: default
+plugins:
+  - jekyll-feed
