--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-midnight
 title: Tinkerer
-description: "Adventures in code"
+description: "Code and Climate Change"
 show_downloads: false
 url: https://www.gustavwengel.dk
 repository: "GeeWee/geewee.github.io"
