--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-midnight
 title: Tinkerer
-description: "Code and Climate Change. Blog about software development in the renewables sector."
+description: "Code and Climate Change. Blog about software development in ClimateTech"
 show_downloads: false
 url: https://www.gustavwengel.dk
 repository: "GeeWee/geewee.github.io"
